--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "watch": "tsc -w",
     "dev": "nodemon dist/index.js",
     "start": "node dist/index.js",
-    "start2": "ts-node src/index.ts"
+    "create:migration": "npx mikro-orm migration:create"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +25,7 @@
     "@mikro-orm/migrations": "^5.2.1",
     "@mikro-orm/postgresql": "^5.2.1",
     "apollo-server-express": "^3.9.0",
+    "argon2": "^0.28.5",
     "express": "^4.18.1",
     "graphql": "^15.3.0",
     "pg": "^8.7.3",
