--- a/.gitignore
+++ b/.gitignore
@@ -75,9 +75,12 @@ web_modules/
 # dotenv environment variable files
 .env
 .env.development.local
+.env.development
 .env.test.local
 .env.production.local
 .env.local
+.env.heroku
+
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
