--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "watch": "tsc -w",
-    "dev": "nodemon dist/index.js",
+    "dev": "SET NODE_ENV=development & nodemon dist/index.js",
     "start": "node dist/index.js",
     "create:migration": "npx mikro-orm migration:create"
   },
@@ -13,8 +13,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/connect-redis": "^0.0.18",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.0",
     "@types/node": "^18.0.1",
+    "@types/redis": "^4.0.11",
     "class-validator": "^0.13.2",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
@@ -26,9 +29,12 @@
     "@mikro-orm/postgresql": "^5.2.1",
     "apollo-server-express": "^3.9.0",
     "argon2": "^0.28.5",
+    "connect-redis": "^6.1.3",
     "express": "^4.18.1",
+    "express-session": "^1.17.1",
     "graphql": "^15.3.0",
     "pg": "^8.7.3",
+    "redis": "^4.1.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1"
   },
