--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "reddit-server",
+  "name": "reddit",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server/index.js",
   "scripts": {
     "watch": "tsc -w",
     "dev": "SET NODE_ENV=development & nodemon dist/index.js",
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/connect-redis": "^0.0.18",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.0",
     "@types/node": "^18.0.1",
@@ -30,6 +31,7 @@
     "apollo-server-express": "^3.9.0",
     "argon2": "^0.28.5",
     "connect-redis": "^6.1.3",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-session": "^1.17.1",
     "graphql": "^15.3.0",
