--- a/web/package.json
+++ b/web/package.json
@@ -16,9 +16,13 @@
     "emotion-theming": "^10.0.27",
     "formik": "^2.1.5",
     "graphql": "^15.3.0",
+    "isomorphic-unfetch": "^3.1.0",
     "next": "^9.1.7",
+    "next-urql": "^3.3.3",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react-dom": "^18.2.0",
+    "react-is": "^18.2.0",
+    "react-ssr-prepass": "^1.5.0",
     "urql": "^1.10.0"
   },
   "devDependencies": {
