--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.0",
     "@types/node": "^18.0.1",
+    "@types/nodemailer": "^6.4.4",
     "@types/redis": "^4.0.11",
     "class-validator": "^0.13.2",
     "ts-node": "^10.8.2",
@@ -35,6 +36,7 @@
     "express": "^4.18.1",
     "express-session": "^1.17.1",
     "graphql": "^15.3.0",
+    "nodemailer": "^6.7.6",
     "pg": "^8.7.3",
     "redis": "^4.1.1",
     "reflect-metadata": "^0.1.13",
