--- a/server/package.json
+++ b/server/package.json
@@ -17,9 +17,11 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.0",
+    "@types/ioredis": "^4.28.10",
     "@types/node": "^18.0.1",
     "@types/nodemailer": "^6.4.4",
     "@types/redis": "^4.0.11",
+    "@types/uuid": "^8.3.4",
     "class-validator": "^0.13.2",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
@@ -36,11 +38,12 @@
     "express": "^4.18.1",
     "express-session": "^1.17.1",
     "graphql": "^15.3.0",
+    "ioredis": "^5.1.0",
     "nodemailer": "^6.7.6",
     "pg": "^8.7.3",
-    "redis": "^4.1.1",
     "reflect-metadata": "^0.1.13",
-    "type-graphql": "^1.1.1"
+    "type-graphql": "^1.1.1",
+    "uuid": "^8.3.2"
   },
   "mikro-orm": {
     "useTsNode": true,
