--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-chakra-ui",
+  "name": "reddit",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -19,7 +19,7 @@
     "isomorphic-unfetch": "^3.1.0",
     "next": "^9.1.7",
     "next-urql": "^3.3.3",
-    "react": "^16.12.0",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "react-ssr-prepass": "^1.5.0",
