--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "watch": "tsc -w",
     "dev": "SET NODE_ENV=development & nodemon dist/index.js",
-    "start": "node dist/index.js",
-    "create:migration": "npx mikro-orm migration:create"
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -27,10 +26,6 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@mikro-orm/cli": "^5.2.1",
-    "@mikro-orm/core": "^5.2.1",
-    "@mikro-orm/migrations": "^5.2.1",
-    "@mikro-orm/postgresql": "^5.2.1",
     "apollo-server-express": "^3.9.0",
     "argon2": "^0.28.5",
     "connect-redis": "^6.1.3",
@@ -43,6 +38,7 @@
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
+    "typeorm": "^0.3.7",
     "uuid": "^8.3.2"
   },
   "mikro-orm": {
