--- a/server/package.json
+++ b/server/package.json
@@ -1,45 +1,48 @@
 {
-  "name": "reddit",
+  "name": "lireddit-server",
   "version": "1.0.0",
   "description": "",
-  "main": "server/index.js",
+  "main": "index.js",
   "scripts": {
     "watch": "tsc -w",
-    "dev": "SET NODE_ENV=development & nodemon dist/index.js",
-    "start": "node dist/index.js"
+    "dev": "nodemon dist/index.js",
+    "start": "node dist/index.js",
+    "start2": "ts-node src/index.ts",
+    "dev2": "nodemon --exec ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/connect-redis": "^0.0.18",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
+    "@types/connect-redis": "^0.0.14",
+    "@types/cors": "^2.8.7",
+    "@types/express": "^4.17.7",
     "@types/express-session": "^1.17.0",
-    "@types/ioredis": "^4.28.10",
-    "@types/node": "^18.0.1",
-    "@types/nodemailer": "^6.4.4",
-    "@types/redis": "^4.0.11",
-    "@types/uuid": "^8.3.4",
-    "class-validator": "^0.13.2",
-    "ts-node": "^10.8.2",
-    "typescript": "^4.7.4"
+    "@types/ioredis": "^4.17.3",
+    "@types/node": "^14.0.27",
+    "@types/nodemailer": "^6.4.0",
+    "@types/redis": "^2.8.25",
+    "@types/uuid": "^8.0.1",
+    "nodemon": "^2.0.4",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.7"
   },
   "dependencies": {
-    "apollo-server-express": "^3.9.0",
-    "argon2": "^0.28.5",
-    "connect-redis": "^6.1.3",
+    "apollo-server-express": "^2.16.1",
+    "argon2": "^0.26.2",
+    "connect-redis": "^5.0.0",
     "cors": "^2.8.5",
-    "express": "^4.18.1",
+    "dotenv": "^16.0.1",
+    "express": "^4.17.1",
     "express-session": "^1.17.1",
     "graphql": "^15.3.0",
-    "ioredis": "^5.1.0",
-    "nodemailer": "^6.7.6",
-    "pg": "^8.7.3",
+    "ioredis": "^4.17.3",
+    "nodemailer": "^6.4.11",
+    "pg": "^8.3.0",
     "reflect-metadata": "^0.1.13",
-    "type-graphql": "^1.1.1",
-    "typeorm": "^0.3.7",
-    "uuid": "^8.3.2"
+    "type-graphql": "^1.0.0-rc.3",
+    "typeorm": "^0.2.25",
+    "uuid": "^8.3.0"
   },
   "mikro-orm": {
     "useTsNode": true,
