--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "emotion-theming": "^10.0.27",
     "formik": "^2.1.5",
     "graphql": "^15.3.0",
+    "graphql-tag": "^2.12.6",
     "isomorphic-unfetch": "^3.1.0",
     "next": "^9.1.7",
     "next-urql": "^3.3.3",
