--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "argon2": "^0.26.2",
     "connect-redis": "^5.0.0",
     "cors": "^2.8.5",
+    "dataloader": "^2.1.0",
     "dotenv": "^16.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
